--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,27 +10,21 @@
         </a>
       </div>
     </nav>
-  
-    <div class="ui three item menu">
+</div>
+    <div class="ui two item menu">
       <a class="item" routerLink="/terminology" routerLinkActive="active">
         Übersicht
       </a>
       <a class="item" routerLink="/terminology-add" routerLinkActive="active">
         Eintrag Hinzufügen
       </a>
-     
+    </div>
               
-     <div>
-            <app-header></app-header>
-      </div>
-       
-      <div>
-      <app-dashboard></app-dashboard>
-      </div>
+      <app-header></app-header>
      
-
-<div>
-    <router-outlet></router-outlet>
-  </div>
+      <app-dashboard></app-dashboard>
+     
+      <router-outlet></router-outlet>
+  
 
 
