--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
    
-<header class="p-5 bg-dark text-white">
-<h1 class="text-center">Welcome to {{ title }}!</h1>       
-  <img src="assets/img/funny.jpg" style="width: 200px;"/>
-</header>
-   <nav class="nav justify-content-center bg-light">
+<h1 class="container fixed-topp-5 bg-dark text-white">
+<img src="assets/img/funny.jpg" height= "100px"/><span>Welcome to {{ title }}!</span>
+</h1>
+   <nav class="container nav justify-content-center bg-light">
         <li class="nav-item">
           <a class="nav-link"  href="#">Übersicht</a>
         </li>
