--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
    
-<h1 class="container fixed-topp-5 bg-dark text-white">
+<h1 class="container bg-dark text-white">
   <img src="assets/img/funny.jpg" height= "100px"/><span>Welcome to {{ title }}!</span>
   </h1>
      <nav class="container nav justify-content-center bg-light">
