--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-Dashboard works!
+<div style="padding: 15px">
+  <div class="ui middle aligned divided list">
+    <div *ngFor="let t of terminologies" class="item">
+      <a
+        class="app-terminology item"
+        [terminology]="t"
+        (click)="onSelect(t)"
+        style="margin: 10px; padding: 10px"
+      ></a>
+    </div>
+  </div>
+</div>
