Dashboard: Show list of terminologies

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="ui middle aligned divided list">
     <div *ngFor="let t of terminologies" class="item">
       <a
-        class="app-terminology item"
+        class="app-terminology"
         [terminology]="t"
         (click)="onSelect(t)"
         style="margin: 10px; padding: 10px"
