Removed obsolete css classes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div style="padding: 15px">
-  <div class="ui middle aligned divided list">
-    <div *ngFor="let t of terminologies" class="item">
+  <div class="">
+    <div *ngFor="let t of terminologies" class="">
       <a
         class="app-terminology"
         [terminology]="t"
