--- a/src/app/terminology-add/terminology-add.component.html
+++ b/src/app/terminology-add/terminology-add.component.html
@@ -1,34 +1,35 @@
 
 <form class="ui form">
     <div style="padding: 50px;">
-        <h4 style="text-align:left"> Add new Lecture</h4>
+        <h4 style="text-align:left"> Eintrag hinzufügen/ändern</h4>
         <div style="text-align:left;">
             <div class="field">
                 <label>Fachbegriff*:</label>
                 <div class="field">
-                <input #terminologyTitle placeholder="Title" />
+                <input #terminologyTitle placeholder="Fachbegriff" />
             </div>
         </div>
             <div class="field">
                 <label>Beschreibung*:</label> 
                  <div class="field">
-                  <input #terminologyDesc placeholder="Desc" />
+                  <input #terminologyDesc placeholder="Beschreibung" />
                 </div>
              </div>
             <div class="field">
                 <label>Name des Autors*:</label>           
                 <div class="field">
-                <input #terminologyCreator placeholder="Creator" />
+                <input #terminologyCreator placeholder="Name des Autors" />
                 </div>
             </div>
             <div class="field">
                 <label>Kapitel*:</label> 
                 <div class="field">
-                <input #terminologyChapter placeholder="Chapter" />
+                <input #terminologyChapter placeholder="Kapitel" />
                 </div>
             </div>
          </div>   
          <button type="button" mdbBtn color="success" mdbWavesEffect>Sichern</button>
+         <button type="button" mdbBtn color="success" mdbWavesEffect>Abbrechen</button>
     </div>
 
 </form>
