--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
 <app-dashboard></app-dashboard>
 <router-outlet></router-outlet>
+<ul>
+<li class="nav-item">
+<a routerLink='/terminology-add' routerLinkActive="active" class="nav-link" >Eintrag</a>
+</li>
+</ul>
