--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <h1 class="container bg-dark text-white">
-  <img src="assets/img/funny.jpg" height="100px" /><span
+  <img src="assets/img/OIP.jpg" height="100px" /><span
     >Welcome to {{ title }}!</span
   >
 </h1>
 <nav class="container nav justify-content-center bg-light">
   <li class="nav-item">
-    <a class="nav-link" href="#">Übersicht</a>
+    <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Übersicht</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Eintrag Hinzufügen</a>
+    <a class="nav-link" routerLink="/terminology-add" routerLinkActive="active">Eintrag Hinzufügen</a>
   </li>
 </nav>
