--- a/src/app/terminology/terminology.component.html
+++ b/src/app/terminology/terminology.component.html
@@ -1,4 +1,4 @@
-<div class="ui form">
+<!-- <div class="ui form">
   <div *ngIf="terminology" style="padding: 50px">
     <h4 style="text-align: left">{{ terminology.title }}</h4>
     <div style="text-align: left">
@@ -10,8 +10,23 @@
       </div>
     </div>
   </div>
- </div>   
-     
-    
-     
+ *//</div>   -->
+
+<div class="container">
+    <div class="row">
+      <div class="col">Kapitel</div>
+      <div class="col">Begriff</div>
+      <div class="col">Beschreibung</div>
+      <div class="col">Erstellt von</div>
+    </div>
+
+    <div *ngIf="terminology">
+    <div class="row">
+      <div class="col">{{ terminology.chapter }}</div>
+      <div class="col">{{ terminology.title }}</div>
+      <div class="col">{{ terminology.desc }}</div>
+      <div class="col">{{ terminology.creator }}</div>
+    </div>
+    </div>
+  </div>
 
