--- a/src/app/terminology-add/terminology-add.component.html
+++ b/src/app/terminology-add/terminology-add.component.html
@@ -5,7 +5,7 @@
         <div style="text-align:left;">
             <div class="form-group">
                 <label>Fachbegriff*:</label>
-                <div type="text" name="fachbegriff" class="form-control" ngModel>
+                <div class="field">
                 <input #terminologyTitle placeholder="Fachbegriff" />
             </div>
         </div>
