--- a/src/app/terminology-add/terminology-add.component.html
+++ b/src/app/terminology-add/terminology-add.component.html
@@ -28,8 +28,13 @@
                 </div>
             </div>
          </div>   
-         <button type="button" mdbBtn color="success" mdbWavesEffect>Sichern</button>
-         <button type="button" mdbBtn color="success" mdbWavesEffect>Abbrechen</button>
+         <button type="button" mdbBtn color="success" mdbWavesEffect (click)="sichern(
+            terminologyTitle.value, 
+            terminologyDesc.value, 
+            terminologyCreator.value, 
+            terminologyChapter.value )">Sichern
+         </button>
+         <button type="button" mdbBtn color="success" mdbWavesEffect *ngIf="fieldsEmpty==true">Abbrechen</button>
     </div>
 
 </form>
