--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,17 @@
 <div style="padding: 15px">
-  <div class="">
-    <div *ngFor="let t of terminologies" class="">
-      <a
-        class="app-terminology"
-        [terminology]="t"
-        (click)="onSelect(t)"
-        style="margin: 10px; padding: 10px"
-      ></a>
+    <div class="container">
+      <div class="row bg-secondary text-light">
+        <div class="col">Kapitel</div>
+        <div class="col">Begriff</div>
+        <div class="col">Beschreibung</div>
+        <div class="col">Erstellt von</div>
+        <div class ="col"> Aktion </div>
+      </div>
+    <div *ngFor="let t of terminologies" class="row">
+      <div class="terminology" [terminology]="t">
+
+
+      </div>
     </div>
   </div>
 </div>
