--- a/src/app/terminology-add/terminology-add.component.html
+++ b/src/app/terminology-add/terminology-add.component.html
@@ -10,28 +10,28 @@
             </div>
         </div>
             <div class="form-group">
-                <label>Beschreibung*:</label> 
+                <label>Beschreibung*:</label>
                  <div class="field">
                   <input #terminologyDesc placeholder="Beschreibung" />
                 </div>
              </div>
             <div class="form-group">
-                <label>Name des Autors*:</label>           
+                <label>Name des Autors*:</label>
                 <div class="field">
                 <input #terminologyCreator placeholder="Name des Autors" />
                 </div>
             </div>
             <div class="form-group">
-                <label>Kapitel*:</label> 
+                <label>Kapitel*:</label>
                 <div class="field">
                 <input #terminologyChapter placeholder="Kapitel" />
                 </div>
             </div>
-         </div>   
-         <button type="button" mdbBtn color="success" mdbWavesEffect (click)="sichern(
-            terminologyTitle.value, 
-            terminologyDesc.value, 
-            terminologyCreator.value, 
+         </div>
+         <button type="button" mdbBtn color="success" mdbWavesEffect (click)="save(
+            terminologyTitle.value,
+            terminologyDesc.value,
+            terminologyCreator.value,
             terminologyChapter.value )">Sichern
          </button>
          <button type="button" mdbBtn color="success" mdbWavesEffect *ngIf="fieldsEmpty==true">Abbrechen</button>
