--- a/src/app/terminology-add/terminology-add.component.html
+++ b/src/app/terminology-add/terminology-add.component.html
@@ -6,19 +6,19 @@
             <div class="form-group">
                 <label>Fachbegriff*:</label>
                 <div class="field">
-                <input #terminologyTitle placeholder="Fachbegriff" />
+                <input name="title" #terminologyTitle placeholder="Fachbegriff" [(ngModel)]="terminology === undefined ? '' : terminology.title" />
             </div>
         </div>
             <div class="form-group">
                 <label>Beschreibung*:</label>
                  <div class="field">
-                  <input #terminologyDesc placeholder="Beschreibung" />
+                  <input name ="desc" #terminologyDesc placeholder="Beschreibung"  [(ngModel)]="terminology === undefined ? '' : terminology.desc" />
                 </div>
              </div>
             <div class="form-group">
                 <label>Name des Autors*:</label>
                 <div class="field">
-                <input #terminologyCreator placeholder="Name des Autors" />
+                <input name = "creator" #terminologyCreator placeholder="Name des Autors"  [(ngModel)]="terminology === undefined ? '' : terminology.creator"/>
                 </div>
             </div>
             <div class="form-group">
