--- a/src/app/terminology/terminology.component.html
+++ b/src/app/terminology/terminology.component.html
@@ -20,6 +20,6 @@
       <div class="col">{{ terminology.title }}</div>
       <div class="col">{{ terminology.desc }}</div>
       <div class="col">{{ terminology.creator }}</div>
-      <div class="col"> <a  routerLink="/terminology-details/{{terminology.id}}"> Editieren </a> <a href ="#" class="text-danger">&times; </a></div>
+      <div class="col"> <a  routerLink="/terminology-edit/{{terminology.id}}"> Editieren </a> <a href ="#" class="text-danger">&times; </a></div>
     </div>
 
