--- a/src/app/terminology-edit/terminology-edit.component.html
+++ b/src/app/terminology-edit/terminology-edit.component.html
@@ -30,9 +30,9 @@
               </div>
           </div>
        </div>
-       <button type="button" mdbBtn color="success" mdbWavesEffect (click)="save()">Sichern
+       <button type="button" class="btn btn-secondary" mdbBtn color="success" mdbWavesEffect (click)="save()">Sichern
        </button>
-       <button type="button" mdbBtn color="success" mdbWavesEffect routerLink="/dashboard"> Abbrechen</button>
+       <button type="button" class="btn btn-secondary" mdbBtn color="success" mdbWavesEffect routerLink="/dashboard"> Abbrechen</button>
        <p style="color:red" *ngIf="fieldsEmpty==true">Bitte fülle alle Felder aus.</p>
   </div>
 
