--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,13 @@
 </h1>
 <nav class="container nav justify-content-center bg-light">
   <li class="nav-item">
-    <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Übersicht</a>
+    <a class="nav-link" routerLink="/dashboard" routerLinkActive="active"
+      >Übersicht</a
+    >
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/terminology-add" routerLinkActive="active">Eintrag Hinzufügen</a>
+    <a class="nav-link" routerLink="/terminology-add" routerLinkActive="active"
+      >Eintrag Hinzufügen</a
+    >
   </li>
 </nav>
