--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="/terminology-add" routerLinkActive="active"
-      >Eintrag Hinzufügen</a
+      >Eintrag hinzufügen</a
     >
   </li>
 </nav>
