--- a/src/app/terminology/terminology.component.html
+++ b/src/app/terminology/terminology.component.html
@@ -1,16 +1,16 @@
 <div
-  class="row"
+  class="row highlight"
   *ngIf="terminology"
   [style.background-color]="chapterColor(terminology.chapter)"
 >
-  <div class="col">{{ terminology.chapter }}</div>
-  <div class="col">{{ terminology.title }}</div>
-  <div class="col">{{ terminology.desc }}</div>
-  <div class="col">{{ terminology.creator }}</div>
-  <div class="col">
-    <a routerLink="/terminology-edit/{{ terminology.id }}"> Editieren</a
-    ><button type="button" (click)="delete(terminology)" class="btn btn-danger">
-      &times;
-    </button>
+  <div class="col-2">{{ terminology.chapter }}</div>
+  <div class="col-2">{{ terminology.title }}</div>
+  <div class="col-5 text-justify">{{ terminology.desc }}</div>
+  <div class="col-1">{{ terminology.creator }}</div>
+  <div class="col-1">
+    <a routerLink="/terminology-edit/{{ terminology.id }}"> Editieren</a>
+  </div>
+  <div class="col-1">
+    <button type="button" (click)="delete(terminology)" class="btn btn-danger">X</button>
   </div>
 </div>
